# kubetoolkit

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
cmd/: root.go
cmd/config/: config.go
cmd/debug/: debug.go
cmd/image/: image.go
internal/config/: config.go
internal/docker/: docker.go
internal/k8s/: k8s.go
kubetlkt/: docker.py  kubernetes.py
kubetoolkit/: Dockerfile
src/: kubetlkt.py
src/kubetoolkit/: .kubetlktconfig  config.py  docker.py  kubetlkt.py
