[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kubetlkt"
version = "0.2.2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click==8.1.3",
    "coloredlogs==15.0.1",
    "kubernetes==26.1.0",
    "docker==6.0.1",
    "platformdirs==3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kubetoolkit = [".kubetlktconfig"]


[project.scripts]
kubetlkt = "kubetoolkit.kubetlkt:cli"